--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -4,12 +4,18 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.text.Font?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.HBox?>
+<HBox fx:controller="sample.Controller"
+      xmlns:fx="http://javafx.com/fxml" alignment="bottom_right"
+        style="-fx-border-color: red; -fx-border-width: 3; -fx-border-style: dashed"
+        spacing="10">
+    <padding>
+        <Insets bottom="10" right="10"/>
+    </padding>
 
-    <Label text="Welcome to JavaFX!" textFill="green">
-        <font>
-            <Font name="Times New Roman bold" size="70"/>
-        </font>
-    </Label>
-</GridPane>
+    <Button text="OK" prefWidth="90"/>
+    <Button text="Cancel" prefWidth="90"/>
+    <Button text="Help" prefWidth="90"/>
+
+</HBox>
