--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -3,34 +3,18 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.control.Label?>
-<BorderPane xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sample.Controller">
-    <top>
-        <Label text="This label is in the top position"
-               BorderPane.alignment="CENTER"
-               style="-fx-border-color: blue; -fx-border-width: 3;-fx-border-style: dashed"/>
-    </top>
-    <left>
-        <Label text="This label is in the left position"
-               BorderPane.alignment="CENTER"/>
-    </left>
-    <right>
-        <Label text="This label is in the right position"
-               BorderPane.alignment="CENTER"/>
-    </right>
-    <center>
-        <Label text="This label is in the centre position"
-               BorderPane.alignment="CENTER"/>
-    </center>
-    <bottom>
-        <HBox alignment="TOP_RIGHT" spacing="10">
-            <padding>
-                <Insets bottom="10" right="10"/>
-            </padding>
-
-            <Button text="OK" prefWidth="90"/>
-            <Button text="Cancel" prefWidth="90"/>
-            <Button text="Help" prefWidth="90"/>
-        </HBox>
-    </bottom>
-</BorderPane>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.VBox?>
+<FlowPane fx:controller="sample.Controller"
+      xmlns:fx="http://javafx.com/fxml">
+    <Button text="Button 1"/>
+    <Button text="Button 2"/>
+    <Button text="Button 3"/>
+    <Button text="Button 4"/>
+    <Button text="Button 5"/>
+    <Button text="Button 6"/>
+    <Button text="Button 7"/>
+    <Button text="Button 8"/>
+    <Button text="Button 9"/>
+    <Button text="Button 10"/>
+</FlowPane>
